updated transformation of bundle readmes

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/show.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/show.html.twig
@@ -142,7 +142,7 @@
     <div id="data">
         <div id="readme">
             <div class="markdown">
-                {{ bundle.readme|markdown }}
+                {{ bundle.readme|github_md_2_md|markdown }}
             </div>
         </div>
     </div>
