--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/show.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/show.html.twig
@@ -34,6 +34,15 @@
         </div>
 
         <div class="box">
+            <h3>{% trans %}bundles.show.tags.title{% endtrans %}</h3>
+                {% for tag in bundle.composerTags %}
+                    <a href="{{ path('bundle_tag', {'sluggedName': tag.sluggedName}) }}" title="{{ tag.name }}">{{ tag.name }}</a>
+                {% else %}
+                    {% trans %}bundles.show.tags.empty{% endtrans %}
+                {% endfor %}
+        </div>
+
+        <div class="box">
             <h3>{% trans %}bundles.show.recommenders.title{% endtrans %}</h3>
             <ul>
                 <li class="bundle-recommenders">
