--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/show.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/show.html.twig
@@ -34,11 +34,11 @@
         </div>
 
         <div class="box">
-            <h3>{% trans %}bundles.show.tags.title{% endtrans %}</h3>
-                {% for tag in bundle.composerTags %}
-                    <a href="{{ path('bundle_tag', {'sluggedName': tag.sluggedName}) }}" title="{{ tag.name }}">{{ tag.name }}</a>
+            <h3>{% trans %}bundles.show.keywords.title{% endtrans %}</h3>
+                {% for keyword in bundle.keywords %}
+                    <a href="{{ path('bundle_keyword', {'slug': keyword.slug}) }}" title="{{ keyword.value }}">{{ keyword.value }}</a>
                 {% else %}
-                    {% trans %}bundles.show.tags.empty{% endtrans %}
+                    {% trans %}bundles.show.keywords.empty{% endtrans %}
                 {% endfor %}
         </div>
 
