Display licence if we have one

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/public/css/style.css
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/public/css/style.css
@@ -257,7 +257,7 @@ background:linear-gradient(top,#f1b525,#d89d14);/* W3C */}
 #bundle-show .col-right .box .info-composer{background: transparent url(http://packagist.org/favicon.ico) no-repeat left center; padding-left: 20px;}
 #bundle-show .col-right .box .info-github{background: transparent url(http://github.com/favicon.png) no-repeat left center; padding-left: 20px;}
 #bundle-show .col-right .box .info-travis{background: transparent url(http://travis-ci.org/favicon.ico) no-repeat left center; padding-left: 20px;}
-#bundle-show #data{float:left;width:628px;margin:0 0 20px;font-size:12px;padding:10px;background:#fafafa;border:1px solid #DDD;}
+#bundle-show .data{float:left;width:628px;margin:0 0 20px;font-size:12px;padding:10px;background:#fafafa;border:1px solid #DDD;}
 #bundle-show #disqus_thread{font-size:12px;background:#FAFAFA;border:1px solid #DDD;padding:0 10px;float:left;margin:0 0 20px;width:628px;}
 #bundle-show .chart-bundle{border:1px solid #DDD;width:648px; overflow: hidden;margin-bottom:20px;background:#FAFAFA;}
 #bundle-show .chart-bundle h2{margin: 10px 0 0 10px;font-size: 14px;font-weight: bold;}
