Add "report an issue" link in footer

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/layout.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/layout.html.twig
@@ -66,6 +66,7 @@
                             <li><a href="{{ path('api') }}">API</a></li>
                             <li><a href="{{ path('scoring') }}">{% trans %}Scoring explanation{% endtrans %}</a></li>
                             <li><a href="{{ path('symfony2bundles') }}">Symfony2bundles</a></li>
+                            <li><a href="https://github.com/KnpLabs/KnpBundles/issues/new">{% trans %}footer.report_issue{% endtrans %}
 
                         </ul>
                     </dd>
