--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/show.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/show.html.twig
@@ -143,7 +143,7 @@
             <h3>{% trans %}bundles.show.latest_commits.title{% endtrans %}</h3>
             <ul>
             {%- for commit in bundle.lastCommits %}
-                <li>{{ commit.message_first_line }}<div class="infos">{% trans %}bundles.show.latest_commits.by{% endtrans %} <a href="{{ path('user_show', {'name': commit.author.login }) }}">{{ commit.author.login }}</a> {{ time_diff(commit.committed_date) }}</div></li>
+                <li>{{ commit.message_first_line }}<div class="infos">{% trans %}bundles.show.latest_commits.by{% endtrans %} <a href="#">{{ commit.author }}</a> {{ time_diff(commit.date) }}</div></li>
             {%- endfor %}
             <ul>
         </div>
