Change banner management

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Main/banner.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Main/banner.html.twig
@@ -1,4 +1,4 @@
-<div id="promo" onclick="_gaq.push(['_trackEvent', 'banner', '{{ id }}', '{{ app.request.locale }}']);">
+<div id="promo" onclick="_gaq.push(['_trackEvent', 'banner');">
     <a class="img" href="{{ url }}"><img src="{{ asset('bundles/knpbundles/images/edgar.png') }}" /></a>
     <div class="bulle">
         {{ text|replace({
