--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/layout.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/layout.html.twig
@@ -74,11 +74,11 @@
                     <dt><a href="http://knplabs.com">KnpLabs</a></dt>
                     <dd>
                         <ul>
-                            <li><a href="http://knplabs.com/training/symfony2">Symfony training (World)</a></li>
-                            <li><a href="http://knplabs.fr/formation/symfony2" hreflang="fr" lang="fr">Formation Symfony (France)</a></li>
-                            <li><a href="http://knplabs.co.uk/training/symfony2">Symfony training in London</a></li>
+                            <li><a href="http://knplabs.com/training/symfony2">Symfony training</a> (World)</li>
+                            <li><a href="http://knplabs.fr/formation/symfony2" hreflang="fr" lang="fr">Formation Symfony</a> (France)</li>
+                            <li><a href="http://knpuniversity.com/">Symfony tutorial</a> screencast</li>
 
-                            <li><a href="http://twitter.com/knplabs">Knp on Twitter</a></li>
+                            <li><a href="http://twitter.com/knplabs">KnpLabs on Twitter</a></li>
                             <li><a href="http://behat.org">Behat: BDD framework for PHP</a></li>
                         </ul>
                     </dd>
