add canonical configuration to bundle view
add cannonicalConfig property and slot in twig view
add method to parse cannonical config from Configuration.php file
fix according to stof comments
propose use Configurator.php from disk with include?
add idea of call to get treeBuilder
build absolute path to include the Configurator.php class from repo
comment line
fix per comments
refactor process configuration and dump it with yaml dumper
fix parsing of namespace
support ConfigurationInterface to read canonical configuration
test passing for update canonical configuration
fix bug reusing output now using canonicalConfiguration property on Repo
fix according to @lsmith comments
fix displaying and filtering bundle configuration

--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/public/css/style.css
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/public/css/style.css
@@ -307,3 +307,9 @@ abbr, acronym {border-bottom:.1em dotted;cursor:help;font-weight:bold;}
 /* ----- Errors ----- */
 .error #content-wrapper div.center {background: url('../images/super-edgar.jpg') no-repeat right center;height:300px}
 .error #content {width: 530px;}
+
+pre.code {
+    line-height: 8px;
+    font-size: 0.9em;
+    border: none;
+}
