--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/User/userbar.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/User/userbar.html.twig
@@ -1,9 +1,11 @@
 <div id="auth">
-    {% if app.user is not null %}
-    <li><img src="{{ gravatar_hash(app.user.gravatarHash, 30, none, 'identicon') }}" /></li>
+{% if app.user is not null %}
+    <li><img src="{{ app.user.gravatarHash }}" height="30" width="30" /></li>
     <li class="current"><span>{{ app.user }}</span></li>
     <li><a href="{{ path('_logout') }}">Log out</a></li>
-    {% else %}
-    <li><a class="login" href="{{ path('_login') }}">Login via GitHub</a></li>
-    {% endif %}
+{% else %}
+    <li><span class="login">Login via:</span></li>
+    <li><a class="login" href="{{ hwi_oauth_login_url('github') }}">GitHub</a></li>
+    <li><a class="login" href="{{ hwi_oauth_login_url('sensio') }}">Sensio Connect</a></li>
+{% endif %}
 </div>
