--- a/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/show.html.twig
+++ b/src/Knp/Bundle/KnpBundlesBundle/Resources/views/Bundle/show.html.twig
@@ -16,8 +16,7 @@
                 {%- if bundle.state != 'unknown' -%}
                 <li>
                     {% trans %}bundles.show.infos.state{% endtrans %}
-                    <span class="state {{ bundle.state|replace({' ': '-'}) }}"
-                          data-state-title="{{ bundle.state|bundle_state_tooltip }}">
+                    <span class="state {{ bundle.state|replace({' ': '-'}) }}" data-state-title="{{ bundle.state|bundle_state_tooltip }}">
                         {{ bundle.state }}
                     </span>
                 </li>
